# assest-health-indexing

./: .gitignore  CLAUDE.md  README.md  dga_config.py  main.py  package-lock.json  pyproject.toml  run_phase_a.py
.claude/: launch.json
dashboard/: index.html  package-lock.json  package.json
dashboard/public/data/: filters.json  fleet_summary.json  model_metrics.json  substations.json  transformer_history.json  transformers.json
dashboard/scripts/: prepare_dashboard_data.py
dashboard/src/: App.jsx  index.css
dashboard/src/components/cards/: KPICard.jsx
dashboard/src/components/charts/: AgeHealthScatter.jsx  DuvalTriangleChart.jsx  FaultDonutChart.jsx  FeatureImportanceChart.jsx  (+2 more)
dashboard/src/constants/: colors.js  thresholds.js
dashboard/src/context/: DashboardContext.jsx
dashboard/src/pages/: Analytics.jsx  FleetOverview.jsx  FleetReport.jsx  Methodology.jsx  ModelPerformance.jsx  Report.jsx  SubstationView.jsx  TransformerDetail.jsx
dashboard/src/utils/: exportCsv.js  formatters.js  riskReason.js
data/models/: failure_predictor_metrics.json  fault_classifier_features.json  fault_classifier_metrics.json  health_index_metrics.json
data/processed/: dga_labeled.csv  dga_wide_format.csv
dga_pipeline/: data_pipeline.py  feature_engineering.py  health_index_calculator.py  label_generator.py  time_series_features.py  traditional_methods.py
dga_training/: train_failure_predictor.py  train_fault_classifier.py  train_health_index.py
reports/: AP_Transco_DGA_Fleet_Health_Report.docx  generate_docx.py  generate_xlsx.py  report_helpers.py
(+9 files in other folders)
